--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <h2>Explanation</h2>
         <p>An average player will gain 5% wealth for each coin toss: <span class="math">(1.5 + 0.6) / 2 = 1.05</span></p>
-        <p>Here's a simulation of 10 000 players making 10 rounds. Vertical axis displays average wealth (log scale)</p>
+        <p>Here's a simulation of 10 000 players making 10 rounds. Vertical axis displays average wealth (log scale):</p>
 
         <div id="ensembleSimulation" class="graph"></div>
 
@@ -45,13 +45,13 @@
         <div id="timeSimulation" class="graph"></div>
 
         <h2>What?!</h2>
-        <p>The game is non-ergodic. This means that the ensemble average (the averge of many players) is different from the time average (one player over time).</p>
+        <p>The game is non-ergodic. This means that the ensemble average (average of many players) is different from the time average (average of many rounds).</p>
 
         <h2>Source</h2>
         <p><a href="https://github.com/ekmwest/gbm-simulation">https://github.com/ekmwest/gbm-simulation</a></p>
 
         <h2>Tell me more!</h2>
-        <p>Here's Ole Peters giving a 15 min explanation of non-ergodic processes:<br />
+        <p>Here's Ole Peters giving a 15 min explanation:<br />
             <a href="https://www.youtube.com/watch?v=LGqOH3sYmQA">https://www.youtube.com/watch?v=LGqOH3sYmQA</a>
         </p>
 
