--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="timeSimulation" class="graph"></div>
 
         <h2>What?!</h2>
-        <p>The game is non-ergodic. This means that the ensemble average (average of many players) is different from the time average (average of many rounds).</p>
+        <p>The game is non-ergodic. This means that the ensemble average (the average of many players) is different from the time average (the average of many rounds).</p>
 
         <h2>Source</h2>
         <p><a href="https://github.com/ekmwest/gbm-simulation">https://github.com/ekmwest/gbm-simulation</a></p>
