--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <p>Here's a simple game:
         <ol>
             <li>You start with one dollar of wealth.</li>
-            <li>Guess heads or tails.</li>
-            <li>A coin is tossed.</li>
-            <li>If you win, your wealth increases 50%.</li>
-            <li>If you loose, your wealth decreases 40%.</li>
+            <li>A fair coin is tossed.</li>
+            <li>On heads, your wealth increases 50%.</li>
+            <li>On tails, your wealth decreases 40%.</li>
             <li>Repeat.</li>
         </ol>
         </p>
