--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ol>
         </p>
 
-        <p>If we play this game repeatedly many times, our wealth will obviously change randomly. But how, exactly, will it randomly change?</p>
+        <p>If we play this game repeatedly many times, our wealth will change randomly. But how, exactly, will it randomly change?</p>
 
         <p>This type of dynamic change is called a "<em>random walk</em>" or more specifically, a "<em>brownian motion</em>". Let's analyze and simulate this brownian motion in some different ways!</p>
 
