--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p>If we play this game repeatedly many times, our wealth will change randomly. But how, exactly, will it randomly change?</p>
 
-        <p>This type of dynamic change is called a <em>"random walk"</em> or more specifically, a <em>"brownian motion"</em>. Let's analyze and simulate this brownian motion in some different ways!</p>
+        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"brownian motion"</em>. Let's analyze and simulate this brownian motion in some different ways!</p>
 
 
 
