--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <p>An average player will gain 5% wealth on each round (each coin toss):<br /><span class="math">EA = (1.5 + 0.6) / 2 = 1.05</span></p>
 
-        <p>Let's simulate an average player. Here we use 10,000 players (an enseble) and run the game for 10 rounds. The vertical axis shows average wealth on a log scale:</p>
+        <p>Let's simulate an average player. Here we use 10,000 players (an ensemble) and run the game for 10 rounds. The vertical axis shows average wealth on a log scale:</p>
 
         <div id="ensembleSimulation" class="graph"></div>
 
