--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>GBM Simulation</title>
+    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="/app.js"></script>
@@ -103,7 +104,7 @@
         <h2>Simulation Code</h2>
 
         <p>The simulation code is published here:<br />
-            <a href="https://github.com/ekmwest/gbm-simulation/blob/main/app.js">https://github.com/ekmwest/gbm-simulation/blob/main/app.js</a>
+            <a target="_blank" href="https://github.com/ekmwest/gbm-simulation/blob/main/app.js">https://github.com/ekmwest/gbm-simulation/blob/main/app.js</a>
         </p>
 
     </div>
