--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-        <h2>Brownian Motion</h2>
+        <h2>Geometric Brownian Motion</h2>
 
         <p>Here's a simple game:
         <ol>
@@ -34,7 +34,7 @@
 
         <p>If you play this game repeatedly many times, your wealth will change randomly. But how, exactly, will it randomly change?</p>
 
-        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"brownian motion"</em>. Let's analyze and simulate this brownian motion in some different ways!</p>
+        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"geometric brownian motion"</em>. Let's analyze and simulate this geometric brownian motion in some different ways!</p>
 
 
 
