--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <h2>Conclusion</h2>
 
-        <p>Because the ensemble average is not equal to the time average, the game is <em>non-ergodic</em>. The game might seem favourable at first, and for the average player, it is. But for an individual player, the ensemble average is not relevant. It wouldn't be rational to participate.</p>
+        <p>Because the ensemble average is not equal to the time average, the game is <em>non-ergodic</em>. The game might seem favourable at first, and for the average player, it is. But for an individual player, the ensemble average is not relevant. It would be irrational to participate.</p>
 
 
 
