--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <p>If you play this game repeatedly many times, your wealth will change randomly. But how, exactly, will it randomly change?</p>
 
-        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"geometric brownian motion"</em>. Let's analyze and simulate this geometric brownian motion in some different ways!</p>
+        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"geometric brownian motion"</em>. Let's analyze and simulate this geometric brownian motion in some different ways.</p>
 
 
 
