--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
         <p>Here's a simple game:
         <ol>
-            <li>You have some amount of wealth.</li>
             <li>A fair coin is tossed.</li>
             <li>On heads, your wealth increases 50%.</li>
             <li>On tails, your wealth decreases 40%.</li>
@@ -34,7 +33,7 @@
 
         <p>If you play this game repeatedly many times, your wealth will change randomly. But how, exactly, will it randomly change?</p>
 
-        <p>This type of dynamic change is called a <em>"random walk"</em>, or more specifically, a <em>"geometric brownian motion"</em>. Let's analyze and simulate this geometric brownian motion in some different ways.</p>
+        <p>This type of change is called a <em>"random walk"</em>, or a <em>"geometric brownian motion"</em>. Let's analyze and simulate the game in some different ways.</p>
 
 
 
